--- a/Backend/package.json
+++ b/Backend/package.json
@@ -20,6 +20,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
+    "ssh2": "^1.16.0",
     "zod": "^3.25.48"
   },
   "devDependencies": {
